# skyframe

./: .editorconfig  .env.example  .gitignore  README.md  example.py  pyproject.toml
skyframe/: __init__.py  settings.yaml
skyframe/evaluation/: __init__.py  callback.py  context.py  evaluation_summary.py  evaluator.py  evaluator_options.py
skyframe/evaluation/resolvables/: __init__.py  base_resolvable.py  eval_test.py  evaluation.py
skyframe/evaluation/results/: __init__.py  assertion_result.py  base_result.py  evaluation_result.py  input_result.py  test_result.py  test_summary.py
skyframe/exceptions/: __init__.py  base.py  conversion.py  generation.py
skyframe/models/: __init__.py  base.py  conversation.py  token_usage.py
skyframe/models/message/: __init__.py  base.py  chunk.py  role.py
skyframe/prompting/: __init__.py  manager.py  utils.py
skyframe/prompting/models/: __init__.py  evaluable_prompt.py  prompt.py  prompt_mesage.py  structure.py
skyframe/prompting/prompts/: pitch_to_investors.yaml
skyframe/runnables/: __init__.py  base.py
skyframe/runnables/agents/: __init__.py  agent.py  tool.py
skyframe/runnables/classifiers/: __init__.py  transformers_query_classifier.py
skyframe/runnables/generators/: __init__.py  base.py
skyframe/runnables/models/: __init__.py  callback.py  metadata.py  params.py  run_info.py
skyframe/settings/: __init__.py  logging.py  prompting.py
skyframe/utils/: __init__.py  audio.py  dict.py  files.py  list.py  logging.py  math.py  path.py  stopwatch_context.py  string_manipulation.py
(+122 files in other folders)
